# my-dashboard

./: .env  .gitignore  README.md  pom.xml
service/: .gitignore  Cargo.toml  Dockerfile  application.properties.example  build.gradle  docker-build.sh  gradle.properties  run.sh  settings.gradle
service/gradle/wrapper/: gradle-wrapper.properties
service/migrations/2018-12-17-192430_create_accounts/: up.sql
service/migrations/2018-12-20-161148_create_users/: down.sql  up.sql
service/migrations/2019-01-11-152941_change_user_to_u8/: up.sql
service/src/: main.rs
service/src/db/: connection.rs  mod.rs  schema.rs  user.rs
service/src/finance/: account.rs  account_service.rs  controller.rs  facade.rs  mod.rs  model.rs  service.rs
service/src/main/java/com/altona/: Main.java
service/src/main/java/com/altona/broadcast/: Broadcast.java  BroadcastController.java  BroadcastFacade.java  UnsavedBroadcast.java
service/src/main/java/com/altona/context/: Context.java  (+8 more)
service/src/main/resources/: application-docker.properties  application-linux.properties  application-linuxheadless.properties  application-local.properties  application-localmac.properties  application-localwindows.properties  application-mac.properties  application-windows.properties  application.properties
service/src/main/resources/db/: changelog-master.xml
service/src/result/: mod.rs
service/src/test/java/com/altona/: Configuration.java  SpringTest.java  SystemPropertyActiveProfilesResolver.java
service/src/user/: authentication_service.rs  facade.rs  mod.rs  model.rs  user_service.rs
(+529 files in other folders)
